backend/deploy/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      name: simple-bank-api
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
