backend/deploy/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-api-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  ingressClassName: nginx
  rules:
    - host: "api.lookeke.com"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-bank-api-service
                port:
                  number: 80
